--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head><meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
         
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Anthony Bonello | FullStack Web Designer</title>
+        <title>Anthony Bonello | Full Stack Web Developer</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta content="NOODP" name="ROBOTS" /><meta content="NOYDIR" name="ROBOTS" />
         <!--<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />-->
@@ -60,7 +60,7 @@
             <!-- <div class="col-xs-12 col-sm-9 col-md-8"> -->
             <div class="col-xs-12 col-sm-7 col-md-8">
                 <h1><span style="font-size:48px;">Anthony Bonello</span></h1>
-                <h2>FullStack Webdesign</h2>
+                <h2>Full Stack Web Developer</h2>
                 <p><b>This website is updated regularly.</b></p>
             </div>
             <div class="hidden-xs col-sm-3 col-md-2">
