--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
             <div class="hidden-xs col-sm-2 col-md-2 ">
                 <!-- Button trigger modal -->
                 <figure type="button" class="btn" data-toggle="modal" data-target="#myModal">
-                    <img id="hackIcon" src="images/Halloween-Hackathon-1st_A_icon-small.png" alt="hackathon icon">
+                    <!-- <img id="hackIcon" src="images/Halloween-Hackathon-1st_A_icon-small.png" alt="hackathon icon"> -->
+                    <!-- <img id="hackIcon" src="images/hackathon-ribbon.png" alt="hackathon icon"> -->
+                    <img id="hackIcon" src="images/hackathon-medal.png" alt="hackathon icon">
                 </figure>
             </div>
             <!-- <div class="col-xs-12 col-sm-9 col-md-8"> -->
